--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
             <version>3.1.0-M1</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
